Fixed building for C++03 and Xcode

--- a/platforms/macos/projects/Configuration/GlobalSettings.xcconfig
+++ b/platforms/macos/projects/Configuration/GlobalSettings.xcconfig
@@ -6,7 +6,7 @@
 //
 //
 
-GCC_PREPROCESSOR_DEFINITIONS_GLOBAL = $(inherited) USE_OPENAL HANDLE_CHARS_SEPARATELY
+GCC_PREPROCESSOR_DEFINITIONS_GLOBAL = $(inherited) MCE_GFX_API_OGL=1 USE_OPENAL HANDLE_CHARS_SEPARATELY
 GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS_GLOBAL)
 
 GCC_SYMBOLS_PRIVATE_EXTERN_GLOBAL = YES
