--- a/platforms/macos/projects/Configuration/Settings_macOS.xcconfig
+++ b/platforms/macos/projects/Configuration/Settings_macOS.xcconfig
@@ -34,4 +34,4 @@ VALID_ARCHS = $(VALID_ARCHS_MACOS)
 ARCHS = $(ARCHS)
 
 BACKEND_SDL1 = USE_SDL1 STBI_NO_THREAD_LOCALS
-BACKEND_SDL2 = USE_SDL2
+BACKEND_SDL2 = USE_SDL2 RAPIDJSON_NO_THREAD_LOCAL
