--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -446,6 +446,11 @@ add_library(reminecraftpe-core STATIC
 )
 target_include_directories(reminecraftpe-core PUBLIC . ..)
 
+if(NOT DEFINED REMCPE_GFX_API)
+	message(STATUS "No GFX API specified, defaulting to OGL...")
+	set(REMCPE_GFX_API, "OGL")
+endif()
+
 message(STATUS "Selected GFX API: ${REMCPE_GFX_API}")
 
 if(REMCPE_GFX_API STREQUAL "OGL")
