--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
             matrix:
                 include:
                   - name: SDL 2
-                    flags: '-DREMCPE_PLATFORM=sdl2 -DREMCPE_GFX_API=OGL'
+                    flags: '-DREMCPE_PLATFORM=sdl2 -DREMCPE_GFX_API=Null'
                     packages: 'libsdl2-dev'
                   - name: SDL 1.2
                     flags: '-DREMCPE_PLATFORM=sdl1 -DREMCPE_GFX_API=OGL'
