--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -448,7 +448,7 @@ target_include_directories(reminecraftpe-core PUBLIC . ..)
 
 if(NOT DEFINED REMCPE_GFX_API)
 	message(STATUS "No GFX API specified, defaulting to OGL...")
-	set(REMCPE_GFX_API, "OGL")
+	set(REMCPE_GFX_API "OGL" CACHE STRING)
 endif()
 
 message(STATUS "Selected GFX API: ${REMCPE_GFX_API}")
