--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,11 @@ project(reminecraftpe)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
 
+if (WIN32)
+set(CMAKE_CXX_STANDARD 11)
+else()
 set(CMAKE_CXX_STANDARD 98)
+endif()
 
 # WASM
 if(EMSCRIPTEN)
