CMake always use C++98 (#212)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,12 @@ project(reminecraftpe)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
 
+if (WIN32 OR LINUX)
+set(CMAKE_CXX_STANDARD 11)
+else()
+set(CMAKE_CXX_STANDARD 98)
+endif()
+
 # WASM
 if(EMSCRIPTEN)
     function(add_compile_and_link_options)
