--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -236,6 +236,7 @@ add_library(reminecraftpe-core STATIC
     world/entity/Rocket.cpp
     world/entity/EntityFactory.cpp
     world/entity/MobFactory.cpp
+    world/entity/MobSpawner.cpp
     world/entity/Chicken.cpp
     world/entity/Cow.cpp
     world/entity/Creeper.cpp
