--- a/platforms/macos/projects/Configuration/Settings_iOS.xcconfig
+++ b/platforms/macos/projects/Configuration/Settings_iOS.xcconfig
@@ -8,7 +8,7 @@
 
 #include "GlobalSettings.xcconfig"
 
-GCC_PREPROCESSOR_DEFINITIONS_IOS = USE_GLES $(GCC_PREPROCESSOR_DEFINITIONS_GLOBAL) 
+GCC_PREPROCESSOR_DEFINITIONS_IOS = USE_GLES RAPIDJSON_NO_THREAD_LOCAL STBI_NO_THREAD_LOCALS $(GCC_PREPROCESSOR_DEFINITIONS_GLOBAL) 
 GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS_IOS)
 
 SDKROOT_IOS = iphoneos
@@ -19,5 +19,5 @@ ARCHS_IOS = armv6 armv7 armv7s arm64
 ARCHS = $(ARCHS_IOS)
 
 // Should be raised if Xcode gives ambiguous error
-//IPHONEOS_DEPLOYMENT_TARGET = 3.0 // iOS 3.0
+IPHONEOS_DEPLOYMENT_TARGET = 5.0 // iOS 3.0
 TARGETED_DEVICE_FAMILY = 1,2 // iPhone/iPad
