--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,10 @@ else()
     link_libraries(Threads::Threads)
 endif()
 
+
+# Disable thread local storage for rapidjson (needed for C++98 & iOS)
+add_compile_options(-DRAPIDJSON_NO_THREAD_LOCAL)
+
 # Android Logging
 if(ANDROID)
     link_libraries(log)
