--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,9 +46,8 @@ else()
     link_libraries(Threads::Threads)
 endif()
 
-
-# Disable thread local storage for rapidjson (needed for C++98 & iOS)
-add_compile_options(-DRAPIDJSON_NO_THREAD_LOCAL)
+# Disable thread local storage (needed for C++98 & iOS)
+add_compile_options(-DRAPIDJSON_NO_THREAD_LOCAL -DSTBI_NO_THREAD_LOCALS)
 
 # Android Logging
 if(ANDROID)
