--- a/platforms/ios/CMakeLists.txt
+++ b/platforms/ios/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.16.0)
 project(reminecraftpe-ios)
 
 target_compile_definitions(reminecraftpe-core PUBLIC HANDLE_CHARS_SEPARATELY USE_GLES)
+target_compile_definitions(stb_image PUBLIC STBI_NO_THREAD_LOCALS)
 
 # Build
 add_executable(reminecraftpe
@@ -15,6 +16,9 @@ add_executable(reminecraftpe
 
 # Core
 target_link_libraries(reminecraftpe reminecraftpe-core)
+
+# stb_image
+target_link_libraries(reminecraftpe stb_image)
 
 # libobjc
 target_link_libraries(reminecraftpe objc)
