try to use LTO if we can

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,6 +111,7 @@ jobs:
               AR: llvm-ar-21
               RANLIB: llvm-ranlib-21
               LIPO: llvm-lipo-21
+              LLVM_CONFIG: llvm-config-21
               REMCPE_NO_IPA: 1
     android:
         strategy:
