--- a/platforms/macos/projects/Configuration/Settings_iOS.xcconfig
+++ b/platforms/macos/projects/Configuration/Settings_iOS.xcconfig
@@ -15,11 +15,11 @@ SDKROOT_IOS = iphoneos
 SDKROOT = $(SDKROOT_IOS)
 
 // Target as many architectures as we can
-ARCHS_IOS = armv6 armv7 armv7s arm64
+ARCHS_IOS = armv7 arm64
 ARCHS = $(ARCHS_IOS)
 
 // Set this to the iOS version of the device you intend to debug with
 // Should be raised if Xcode gives ambiguous error
-//IPHONEOS_DEPLOYMENT_TARGET = 3.0 // iOS 3.0
+//IPHONEOS_DEPLOYMENT_TARGET = 3.1 // iOS 3.1
 
 TARGETED_DEVICE_FAMILY = 1,2 // iPhone/iPad
