Fixed shaders for GLES 2, for some reason didn't get committed when it should have

--- a/platforms/macos/projects/Minecraft/Minecraft.xcodeproj/xcshareddata/xcschemes/MinecraftClient.SDL1.xcscheme
+++ b/platforms/macos/projects/Minecraft/Minecraft.xcodeproj/xcshareddata/xcschemes/MinecraftClient.SDL1.xcscheme
@@ -67,7 +67,8 @@
    <ProfileAction
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
-      useCustomWorkingDirectory = "NO"
+      useCustomWorkingDirectory = "YES"
+      customWorkingDirectory = "$(MC_ROOT)/game"
       buildConfiguration = "Release [SDL1] (Default)"
       debugDocumentVersioning = "YES">
       <BuildableProductRunnable>
