--- a/platforms/macos/projects/Minecraft/Minecraft.xcodeproj/xcshareddata/xcschemes/MinecraftClient.SDL2.xcscheme
+++ b/platforms/macos/projects/Minecraft/Minecraft.xcodeproj/xcshareddata/xcschemes/MinecraftClient.SDL2.xcscheme
@@ -68,7 +68,8 @@
    <ProfileAction
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
-      useCustomWorkingDirectory = "NO"
+      useCustomWorkingDirectory = "YES"
+      customWorkingDirectory = "$(MC_ROOT)/game"
       buildConfiguration = "Release [SDL2] (Default)"
       debugDocumentVersioning = "YES">
       <BuildableProductRunnable
